Input and labels are aligned correctish

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+.row label{
+    display: inline-block;
+  width: 60px;
+  text-align: right;
+}
+
+
+
 .bold{
     font-weight: 400;
 }
